[package]
edition = "2021"
name = "syntect"
version = "0.0.0"

[features]
default = ["target_node"]
target_node = ["napi", "napi-derive", "napi-build", "syntect/default"]
target_wasm = ["wasm-bindgen", "syntect/default-fancy"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.2", optional = true, default-features = false, features = ["napi4"] }
napi-derive = { version = "2.0.6", optional = true }
wasm-bindgen = { version = "0.2.78", optional = true }
syntect = { version = "5.2", default-features = false }

[build-dependencies]
napi-build = { version = "1.2.1", optional = true }

[profile.release]
opt-level = 3
lto = true
